//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package extensions.dependencytrack.v1;

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/extensions/dependencytrack/v1/api";
import "validate/validate.proto";

// RegistrationRequest is what the integration expect as input of the pre-registration step
message RegistrationRequest {
	// The URL of the Dependency-Track instance
	string instance_uri = 1 [(validate.rules).string.uri = true];
	string api_key = 2 [(validate.rules).string.min_len = 1];
	// Support the option to automatically create projects if requested
	bool allow_auto_create = 3;
}

// AttachmentRequest is what the integration expect as input of the pre-attachment step
message AttachmentRequest {
	oneof project {
		option (validate.required) = true;
		// The integration might either use a pre-configured projectID
		string project_id = 1;
		// name of the project ot be auto created
		string project_name = 2;
	}
}